# blog_api

./: Cargo.toml  README.md  Rocket.toml
migrations/2022-05-10-133354_create_users/: up.sql
src/: db.rs  lib.rs  main.rs  schema.rs
src/controller/: mod.rs  post_controller.rs  user_controller.rs
src/models/: mod.rs  post.rs  user.rs
